<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_vertical_margin"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_horizontal_margin">
    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_progress"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:text="@string/login_progress_logging_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Login form -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="253dp"
                android:layout_height="207dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:src="@drawable/logologin"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"/>

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray">

                <requestFocus/>
            </AutoCompleteTextView>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_log_in_short"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <Button
                android:id="@+id/login_button"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_log_in"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/login_notice"
                style="@style/LoginNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>